--- a/css/vex-theme-plain.css
+++ b/css/vex-theme-plain.css
@@ -69,13 +69,14 @@
     box-shadow: inset 0 0 0 300px transparent; } }
 
 .vex.vex-theme-plain {
-  padding-top: 50px;
+  padding-top: 10vh;
+  padding-bottom:10vh;
 }
 .vex.vex-theme-plain .vex-content {
   font-family: "Helvetica Neue", sans-serif;
   background: #fff;
   color: #444;
-  padding: 1em;
+  padding: 2vh;
   position: relative;
   margin: 0 auto;
   max-width: 95%;
